# ZoneMinder

./: AGENTS.md  CMakeLists.txt  zm.conf.in  zoneminder-config.cmake
.github/workflows/: build-ai_server.yml  build-deb-packages-aarch64.yml  build-deb-packages.yml
db/: CMakeLists.txt  triggers.sql  zm_create.sql.in  zm_sensor_actions.sql  zm_sensor_server_types.sql  zm_sensor_servers.sql  zm_sensors.sql  zm_update-1.31.11.sql  zm_update-1.31.46.sql  zm_update-1.33.10.sql  zm_update-1.33.12.sql  zm_update-1.33.13.sql  zm_update-1.39.0.sql  zm_update-1.39.3.sql  zm_update-1.39.5.sql  zm_update-1.39.7.sql  zm_update-1.39.7.sql.in
distros/redhat/: zoneminder.spec
distros/ubuntu1604/: control
distros/ubuntu1604_wsl/: control  rules
distros/ubuntu2004/: control
scripts/: CMakeLists.txt  zmaudit.pl.in  zmdc.pl.in  zmpkg.pl.in  zmsensor_monitor.pl.in  zmstats.pl.in
src/: CMakeLists.txt  netint_network.cpp  zm_analysis_thread.cpp  zm_avfilter_worker.cpp  zm_camera.cpp  zm_camera.h  zm_config.cpp  zm_config.h  zm_db.cpp  zm_decoder_thread.cpp  zm_event.cpp  zm_eventstream.cpp  zm_eventstream.h  zm_ffmpeg.cpp  zm_ffmpeg.h  zm_ffmpeg_camera.cpp  zm_ffmpeg_camera.h  zm_ffmpeg_engine_camera.cpp  zm_ffmpeg_engine_camera.h  zm_ffmpeg_input.cpp  zm_image.cpp  zm_image.h  zm_local_camera.cpp  zm_monitor.cpp  zm_monitor.h  zm_monitor_monitorlink.cpp  zm_monitor_onvif.cpp  zm_monitorstream.cpp  zm_netint_yolo.cpp  zm_netint_yolo.h  zm_openvino.cpp  zm_openvino.h  zm_packet.cpp  zm_packet.h  zm_packetqueue.cpp  zm_remote_camera_rtsp.cpp  zm_rgb.h  zm_rtsp_server.cpp  zm_rtsp_server_fifo_audio_source.cpp  zm_rtsp_server_fifo_audio_source.h  (+18 more)
tests/: CMakeLists.txt  zm_image.cpp  zm_yolov8_onnx_postprocess.cpp
utils/: do_debian_package.sh
web/: index.php
(+121 files in other folders)
